crates/ir/tests/snapshots/lower_test__inference__self_type_generic_int.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module inference__self_type_generic_int

struct Box[a] { value: a }
trait MyEq[l8] { my_eq(l8, l8): Bool }
instance inference__self_type_generic_int.MyEq[Int] { my_eq=MyEq$$Int$$my_eq }
instance inference__self_type_generic_int.MyEq[Box$$Var0] { my_eq=MyEq$$Box$$Var0$$my_eq }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn main() -> Unit =
  let v0: ~Box[Int] = construct Box(1)
  let v1: ~Box[Int] = construct Box(1)
  let v3: Dict[inference__self_type_generic_int.MyEq, Int] = get_dict inference__self_type_generic_int.MyEq[Int]
  let v4: Dict[inference__self_type_generic_int.MyEq, Box[Int]] = make_dict inference__self_type_generic_int.MyEq[Box[Int]](v3)
  let v5: Bool = trait_call inference__self_type_generic_int.MyEq.my_eq(v4, v0, v1)
  let v2: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v6: Unit = call println(v2, v5)
  v6

fn MyEq$$Int$$my_eq(v7: Int, v8: Int) -> Bool =
  let v9: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v10: Bool = trait_call core/eq.Eq.eq(v9, v7, v8)
  v10

fn MyEq$$Box$$Var0$$my_eq(v11: Dict[inference__self_type_generic_int.MyEq, m8], v12: Box[m8], v13: Box[m8]) -> Bool =
  let v14: m8 = project v12.0
  let v15: m8 = project v13.0
  let v16: Bool = trait_call inference__self_type_generic_int.MyEq.my_eq(v11, v14, v15)
  v16
