crates/ir/tests/snapshots/lower_test__inference__type_qualification.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module inference__type_qualification

struct Pos { x: Int, y: Int }
instance core/show.Show[Pos] { show=Show$$Pos$$show }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (m) -> Unit

fn main() -> Unit =
  let v0: ~Pos = construct Pos(1, 2)
  let v1: Dict[core/show.Show, Pos] = get_dict core/show.Show[Pos]
  let v2: String = trait_call core/show.Show.show(v1, v0)
  let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v3, v2)
  let v5: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v6: Bool = trait_call core/eq.Eq.eq(v5, 1, 1)
  let v7: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v8: Unit = call println(v7, v6)
  let v10: ~List[Int] = construct List::Nil#1()
  let v11: ~List[Int] = construct List::Cons#0(3, v10)
  let v12: ~List[Int] = construct List::Cons#0(2, v11)
  let v9: ~List[Int] = construct List::Cons#0(1, v12)
  switch v9 {
    0 (v13: h, v14: List[h]) ->
      switch v14 {
        0 (v15: h, v16: List[h]) ->
          switch v16 {
            0 (v17: Int, v18: List[h]) ->
              switch v18 {
                1 ->
                  let v19: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
                  let v20: Unit = call println(v19, v17)
                  v20
                _ ->
                  let v21: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
                  let v22: Unit = call println(v21, 0)
                  v22
              }
            _ ->
              let v23: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
              let v24: Unit = call println(v23, 0)
              v24
          }
        _ ->
          let v25: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
          let v26: Unit = call println(v25, 0)
          v26
      }
    _ ->
      let v27: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v28: Unit = call println(v27, 0)
      v28
  }

fn Show$$Pos$$show(v29: Pos) -> String =
  let v30: Int = project v29.0
  let v31: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v32: String = trait_call core/show.Show.show(v31, v30)
  let v33: String = concat_string("Pos(", v32)
  let v34: String = concat_string(v33, ", ")
  let v35: Int = project v29.1
  let v36: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v37: String = trait_call core/show.Show.show(v36, v35)
  let v38: String = concat_string(v34, v37)
  let v39: String = concat_string(v38, ")")
  v39
